# sarawan

./: .env.sample  .gitignore  README.md  pyproject.toml  sarawan_test.py
config/: settings.py  urls.py
store/: admin.py  models.py  pagination.py  serializers.py  services.py  urls.py  views.py
store/management/commands/: fill.py
store/migrations/: 0001_initial.py  0002_initial.py
tests/: __init__.py  test_api_store.py  test_api_store_cart.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: create_su.py
users/migrations/: 0001_initial.py
